--- a/ECommerce.WebApp/Views/Home/Index.cshtml
+++ b/ECommerce.WebApp/Views/Home/Index.cshtml
@@ -1,29 +1,14 @@
-﻿@model HomeViewModel
+﻿@using ECommerce.Models.ViewModels.Products
+@using ECommerce.Models.ViewModels.Slides
+@model HomeViewModel
 @{
     ViewData["title"] = "Home";
+    var allRouteCategoryData = new Dictionary<string, string>()
+    {
+        {"culture","en-us"}
+    };
+    Model.isFeatured = true;
 }
-<!-- SLIDE  -->
-<section id="home-section" class="hero">
-	<div class="home-slider owl-carousel">
-        @foreach(var slide in Model.Slides)
-        {
-            <div class="slider-item" style="background-image: url(@slide.ImagePath);">
-			<div class="overlay"></div>
-			<div class="container">
-				<div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
-
-					<div class="col-md-12 ftco-animate text-center">
-						<h1 class="mb-2">@slide.Name</h1>
-						<h2 class="subheading mb-4">@slide.Description</h2>
-					</div>
-				</div>
-			</div>
-		</div>
-        }
-	</div>
-</section>
-<!-- END SLIDE  -->
-
 <!-- ABOUT US -->
 <section class="ftco-section">
     <div class="container">
@@ -89,50 +74,13 @@
         </div>
     </div>
     <div class="container">
-        <div class="col-md-10 mb-5 text-center" style="margin: auto">
-            <ul class="product-category">
-                <li><a href="#" class="active">All</a></li>
-                @foreach(var featuredCategory in Model.FeaturedCategories)
-                {
-                    <li><a href="#">@featuredCategory.Name</a></li>
-                }
-            </ul>
-        </div>
+        @await Component.InvokeAsync("CategoryNavBar",Model.isFeatured);
     </div>
     <div class="container">
         <div class="row">
             @foreach(var featuredProduct in Model.FeaturedProducts)
             {
-                <div class="col-md-6 col-lg-3 ftco-animate">
-                    <div class="product">
-                        <a href="#" class="img-prod">
-                            <img class="img-fluid" src="@featuredProduct.imagePaths[0]" alt="Colorlib Template" style="min-height: 220px;">
-                            @*<span class="status">30%</span>*@
-                            <div class="overlay"></div>
-                        </a>
-                        <div class="text py-3 pb-4 px-3 text-center">
-                            <h3><a href="#">@featuredProduct.Name</a></h3>
-                            <div class="d-flex">
-                                <div class="pricing">
-                                    <p class="price"><span>@featuredProduct.Price</span></p>
-                                </div>
-                            </div>
-                            <div class="bottom-area d-flex px-3">
-                                <div class="m-auto d-flex">
-                                    <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
-                                        <span><i class="ion-ios-menu"></i></span>
-                                    </a>
-                                    <a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
-                                        <span><i class="ion-ios-cart"></i></span>
-                                    </a>
-                                    <a href="#" class="heart d-flex justify-content-center align-items-center ">
-                                        <span><i class="ion-ios-heart"></i></span>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                @await Html.PartialAsync("_ProductCard", featuredProduct);
             }
         </div>
     </div>
