--- a/ECommerce.WebApp/Views/Shared/_Layout.cshtml
+++ b/ECommerce.WebApp/Views/Shared/_Layout.cshtml
@@ -1,5 +1,17 @@
-﻿@{
+﻿@using ECommerce.Models.Request.Common
+@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
+@using ECommerce.Utilities;
+@{
     ViewData["title"] = "Mystic Green";
+    var currentCulture = "en-us";
+    var isAuthenticate = !string.IsNullOrEmpty(HttpContextAccessor.HttpContext.Session.GetString("token"));
+    var defaultPagingProduct = new Dictionary<string, string>()
+            {
+                { "pageIndex", "1" },
+                { "pageSize", SystemConstants.ProductSettings.pageSizePaging.ToString()},
+                { "categoryId", "0"}
+            };
 }
 <!DOCTYPE html>
 <html lang="en">
@@ -12,77 +24,114 @@
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
-    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="~/css/open-iconic-bootstrap.min.css">
+    <link rel="stylesheet" href="~/css/animate.css">
 
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/magnific-popup.css">
+    <link rel="stylesheet" href="~/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="~/css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="~/css/magnific-popup.css">
 
-    <link rel="stylesheet" href="css/aos.css">
+    @*<link rel="stylesheet" href="~/css/aos.css">*@
 
-    <link rel="stylesheet" href="css/ionicons.min.css">
+    <link rel="stylesheet" href="~/css/ionicons.min.css">
 
-    <link rel="stylesheet" href="css/bootstrap-datepicker.css">
-    <link rel="stylesheet" href="css/jquery.timepicker.css">
+    <link rel="stylesheet" href="~/css/bootstrap-datepicker.css">
+    <link rel="stylesheet" href="~/css/jquery.timepicker.css">
 
 
-    <link rel="stylesheet" href="css/flaticon.css">
-    <link rel="stylesheet" href="css/icomoon.css">
-    <link rel="stylesheet" href="css/style.css">
-
+    <link rel="stylesheet" href="~/css/flaticon.css">
+    <link rel="stylesheet" href="~/css/icomoon.css">
+    <link rel="stylesheet" href="~/css/style.css">
+    <link rel="stylesheet" href="~/css/rating.css" />
 </head>
 <body class="goto-here">
     <!-- header -->
-    @*		<div class="py-1 bg-primary">
-        <div class="container">
-        <div class="row no-gutters d-flex align-items-start align-items-center px-md-0">
-        <div class="col-lg-12 d-block">
-        <div class="row d-flex">
-        <div class="col-md pr-4 d-flex topper align-items-center">
-        <div class="icon mr-2 d-flex justify-content-center align-items-center"><span class="icon-phone2"></span></div>
-        <span class="text">+ 1235 2355 98</span>
-        </div>
-        <div class="col-md pr-4 d-flex topper align-items-center">
-        <div class="icon mr-2 d-flex justify-content-center align-items-center"><span class="icon-paper-plane"></span></div>
-        <span class="text">youremail@email.com</span>
-        </div>
-        <div class="col-md-5 pr-4 d-flex topper align-items-center text-lg-right">
-        <span class="text">3-5 Business days delivery &amp; Free Returns</span>
-        </div>
-        </div>
-        </div>
-        </div>
-        </div>
-        </div>*@
-
+    @if (isAuthenticate)
+    {
+        @await Component.InvokeAsync("HelloHeader")
+        ;
+    }
     <!-- NAV -->
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
         <div class="container">
-            <a class="navbar-brand" href="index.html">@ViewData["title"]</a>
+            <a class="navbar-brand" asp-route-culture="@currentCulture" asp-controller="home" asp-action="index">@ViewData["title"]</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="oi oi-menu"></span> Menu
             </button>
 
             <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-                    <li class="nav-item"><a href="about.html" class="nav-link">Shop</a></li>
-                    <li class="nav-item"><a href="about.html" class="nav-link">Login</a></li>
-                    <li class="nav-item cta cta-colored"><a href="cart.html" class="nav-link"><span class="icon-shopping_cart"></span>[0]</a></li>
+                    <li class="nav-item " @ViewContext.RouteData.Values["controller"].ToString().ToLower() !="home" ? "active" : "" "">
+                        <a 
+                            asp-controller="home" 
+                            asp-action="index" 
+                            asp-route-culture="@currentCulture" 
+                            class="nav-link">Home</a>
+                    </li>
+                    <li class="nav-item " @ViewContext.RouteData.Values["controller"].ToString().ToLower() !="shop" ? "active" : "" "">
+                        <a asp-controller="shop"
+                           asp-action = "index"
+                           asp-route-culture=@currentCulture
+                           asp-all-route-data="@defaultPagingProduct"
+                           class="nav-link">
+                            Shop
+                        </a>
+                    </li>
+                    @if (isAuthenticate)
+                    {
+                        <li class="nav-item">
+                            <a 
+                                asp-controller="account" 
+                                asp-action="logout" 
+                                class="nav-link">Logout</a>
+                        </li>
+                    }
+                    else
+                    {
+                        <li class="nav-item " @ViewContext.RouteData.Values["action"].ToString().ToLower() !="login" ? "active" : "" "">
+                            <a 
+                                asp-controller="account" 
+                                asp-action="index" 
+                                class="nav-link">Login</a>
+                        </li>
+                        <li class="nav-item " @ViewContext.RouteData.Values["action"].ToString().ToLower() !="register" ? "active" : "" "">
+                            <a 
+                                asp-controller="account" 
+                                asp-action="register" 
+                                class="nav-link">Register</a>
+                        </li>
+                    }
+                    <li class="nav-item cta cta-colored">
+                        <a 
+                            asp-controller="cart" 
+                            asp-action="cart"
+                            class="nav-link" >
+                                <span class="icon-shopping_cart"></span>
+                                [ @await Html.PartialAsync("_NumOfCart") ]
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
     <!-- END NAV -->
+    <!-- SLIDE -->
+    @if (ViewContext.RouteData.Values["controller"].ToString().ToLower() != "account")
+    {
+        @await Component.InvokeAsync("Slide")
+    }
+    else
+    {
+        <hr class="dropdown-divider">
 
+    }
+    <!-- END SLIDE -->
     <!-- BODY -->
     @RenderBody()
     <!-- END BODY -->
-
     <!-- FOORTER -->
 
-                                                <hr class="dropdown-divider">
+    <hr class="dropdown-divider">
 
     <footer class="ftco-footer ftco-section">
 
@@ -144,23 +193,24 @@
     <!-- END FOORTER -->
     <!-- loader -->
     <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" /><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00" /></svg></div>
-
-    <script src="js/jquery.min.js"></script>
-    <script src="js/jquery-migrate-3.0.1.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.easing.1.3.js"></script>
-    <script src="js/jquery.waypoints.min.js"></script>
-    <script src="js/jquery.stellar.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/aos.js"></script>
-    <script src="js/jquery.animateNumber.min.js"></script>
-    <script src="js/bootstrap-datepicker.js"></script>
-    <script src="js/scrollax.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-    <script src="js/google-map.js"></script>
-    <script src="js/main.js"></script>
-
+    @*<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>*@
+    <script src="~/js/jquery.min.js"></script>
+    <script src="~/js/jquery-migrate-3.0.1.min.js"></script>
+    <script src="~/js/popper.min.js"></script>
+    <script src="~/js/jquery.easing.1.3.js"></script>
+    <script src="~/js/jquery.waypoints.min.js"></script>
+    <script src="~/js/jquery.stellar.min.js"></script>
+    <script src="~/js/jquery.magnific-popup.min.js"></script>
+    <script src="~/js/jquery.animateNumber.min.js"></script>
+    <script src="~/js/bootstrap.min.js"></script>
+    <script src="~/js/owl.carousel.min.js"></script>
+    <script src="~/js/bootstrap-datepicker.js"></script>
+    <script src="~/js/scrollax.min.js"></script>
+    <script src="~/js/aos.js"></script>
+    @*<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>*@
+    @*<script src="~/js/google-map.js"></script>*@
+    <script src="~/js/main.js"></script>
+    <script src="~/js/site.js"></script>
+    @RenderSection("scripts", required: false)
 </body>
 </html>
