--- a/ECommerce.WebApp/Views/Shared/Components/Slide/Default.cshtml
+++ b/ECommerce.WebApp/Views/Shared/Components/Slide/Default.cshtml
@@ -1,5 +1,8 @@
 ﻿@using ECommerce.Models.ViewModels.Slides
 @model List<SlideViewModel>
+@{
+	var isHome = (ViewContext.RouteData.Values["controller"].ToString().ToLower() == "home");
+}
 <!-- SLIDE  -->
 <section id="home-section" class="hero">
 	<div class="home-slider owl-carousel">
@@ -14,7 +17,7 @@
 						<h1 class="mb-2">@slide.Name</h1>
 						<h2 class="subheading mb-4">@slide.Description</h2>
 						<!-- if we go to product hide button go to shop -->
-                        @if(ViewContext.RouteData.Values["productId"] == null) {<p><a href="#" class="btn btn-primary">View Details</a></p>}} 
+                        @if(isHome) {<p><a asp-controller="shop" asp-action="index" class="btn btn-primary">View Details</a></p>}} 
 					</div>
 				</div>
 			</div>
