--- a/ECommerce.WebApp/Views/Cart/Cart.cshtml
+++ b/ECommerce.WebApp/Views/Cart/Cart.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Cart";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    var requestCreateOrderVM = new CreateOrderRequest();
     decimal subTotal = 0;
     foreach (var cart in @Model)
     {
@@ -10,8 +11,6 @@
     }
     decimal delivery = 0;
     decimal discount = 0;
-
-    var requestCreateOrderVM = new CheckoutVM();
 }
 
 <section class="ftco-section ftco-cart">
@@ -33,11 +32,6 @@
                         <tbody>
                             @foreach (var cart in Model)
                             {
-                                requestCreateOrderVM.ProductOrderRequests.Add(new BaseProductOrderRequest()
-                                    {
-                                        Price = cart.Product.Price,
-                                        Quantity = cart.Quantity
-                                    });
                                 <tr class="text-center">
                                     <td class="product-remove"><a data-productId=@cart.Product.Id class="btn-remove-cart-item"><span class="ion-ios-close"></span></a></td>
 
@@ -71,62 +65,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-7 ftco-animate">
-                    <form asp-controller="cart" asp-action="checkout" class="billing-form" style="padding-top: 2rem;">
-                        <h3 class="mb-4 billing-heading">Billing Details</h3>
-                        <div class="row align-items-end">
-                            @if (false)
-                            {
-                                <!-- first and last name -->
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <label for="firstname">Firt Name</label>
-                                        <input type="text" class="form-control" placeholder="">
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <label for="lastname">Last Name</label>
-                                        <input type="text" class="form-control" placeholder="">
-                                    </div>
-                                </div>
-                            }
-                            else
-                            {
-                                <!-- Full name -->
-                                <div class="col-md-12">
-                                    <div class="form-group">
-                                        <label for="streetaddress">Your Name</label>
-                                        <input asp-for=@requestCreateOrderVM.ShipName type="text" class="form-control">
-                                    </div>
-                                </div>
-                            }
-
-                            <!-- address -->
-                            <div class="w-100"></div>
-                            <div class="col-md-12">
-                                <div class="form-group">
-                                    <label for="streetaddress">Your Address</label>
-                                    <input asp-for=@requestCreateOrderVM.ShipAddress type="text" class="form-control">
-                                </div>
-                            </div>
-
-                            <!-- phone and email -->
-                            <div class="w-100"></div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label for="phone">Phone</label>
-                                    <input asp-for=@requestCreateOrderVM.ShipPhoneNumber type="text" class="form-control" placeholder="">
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label for="emailaddress">Email Address</label>
-                                    <input asp-for=@requestCreateOrderVM.ShipEmail type="text" class="form-control" placeholder="">
-                                </div>
-                            </div>
-                        </div>
-                        <button class="btn btn-primary py-3 px-4">Place an order</button>
-                    </form>
+                    @if(Model.Count > 0)
+                    {
+                        @await Html.PartialAsync("_FormCheckout", new CheckoutVM());
+                    }
                 </div>
                 <div class="col-xl-5">
                     <div class="row mt-5 pt-3" style="padding-top: 5rem !important;">
