--- a/ECommerce.WebApp/Views/Shared/_CommentBox.cshtml
+++ b/ECommerce.WebApp/Views/Shared/_CommentBox.cshtml
@@ -1,14 +1,16 @@
-﻿@{
+﻿@using ECommerce.Models.Request.Products
+@model CreateProductReviewRequest
+@{
     var currentProductId = this.Context.Request.Query["productId"];
 }
 <dl class="dl-horizontal" style="margin: 0 10%">
     <dt>
-        Comment
+        <h2>Your Comment</h2> 
     </dt>
 
     <dd>
         <div class="commentBox">
-            <form asp-action="rating"  asp-asp-controller="product" method="post" >
+            <form asp-controller="product" asp-action="rating"  method="post" asp-route-productId=@currentProductId >
                 @Html.AntiForgeryToken()
                 <div class="form-horizontal">
                     <div class="form-group">
@@ -17,20 +19,28 @@
                         </label>
                         <div class="col-md-7">
                             <div onmouseout="CRateSelected()">
-                                <span class="starFade" id="Rate1" onclick="CRate(1)" onmouseover="CRateOver(1)" onmouseout="CRateOut(1)"></span><span class="starFade" id="Rate2" onclick="CRate(2)" onmouseover="CRateOver(2)" onmouseout="CRateOut(2)"></span><span class="starFade" id="Rate3" onclick="CRate(3)" onmouseover="CRateOver(3)" onmouseout="CRateOut(3)"></span><span class="starFade" id="Rate4" onclick="CRate(4)" onmouseover="CRateOver(4)" onmouseout="CRateOut(4)"></span><span class="starFade" id="Rate5" onclick="CRate(5)" onmouseover="CRateOver(5)" onmouseout="CRateOut(5)"></span>
+                                <span class="starFade" id="Rate1" onclick="CRate(1)" onmouseover="CRateOver(1)" onmouseout="CRateOut(1)"></span>
+                                <span class="starFade" id="Rate2" onclick="CRate(2)" onmouseover="CRateOver(2)" onmouseout="CRateOut(2)"></span>
+                                <span class="starFade" id="Rate3" onclick="CRate(3)" onmouseover="CRateOver(3)" onmouseout="CRateOut(3)"></span>
+                                <span class="starFade" id="Rate4" onclick="CRate(4)" onmouseover="CRateOver(4)" onmouseout="CRateOut(4)"></span>
+                                <span class="starFade" id="Rate5" onclick="CRate(5)" onmouseover="CRateOver(5)" onmouseout="CRateOut(5)"></span>
                             </div>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-md-12">
-                            <textarea name="Comment" id="Comment" required rows="5" style="width:100%;" class="form-control"></textarea>
+                            <textarea asp-for=Comment name="Comment" id="Comment" required rows="5" style="width:100%;" class="form-control"></textarea>
                         </div>
                     </div>
                     <div class="form-group">
-                        <div class="col-md-12">
-                            <input type="hidden" name="productId" value="@currentProductId" />
-                            <input type="hidden" name="Rating" id="Rating" value="0" />
-                            <input type="submit" id="btnRegister" name="btnRegister" value="Submit Comment" class="btn btn-warning" />
+                        <div class="col-md-12" style="justify-content: end; display: flex;">
+                            <input type="hidden" id="Rating" value="@Model.Rating" asp-for=Rating/>
+                            <input 
+                                type="submit" 
+                                id="btnRegister" 
+                                name="btnRegister"
+                                value="Submit Comment"
+                                class="btn btn-info" />
                         </div>
                     </div>
                 </div>
@@ -40,44 +50,3 @@
     </dd>
 
 </dl>
-<script>
-    function SubmitComment() {
-        if ($("#Rating").val() == "0") {
-            alert("Please rate this service provider.");
-            return false;
-        }
-        else {
-            return true;
-        }
-    }
-
-    function CRate(r) {
-        $("#Rating").val(r);
-        for (var i = 1; i <= r; i++) {
-            $("#Rate" + i).attr('class', 'starGlow');
-        }
-        // unselect remaining
-        for (var i = r + 1; i <= 5; i++) {
-            $("#Rate" + i).attr('class', 'starFade');
-        }
-    }
-
-    function CRateOver(r) {
-        for (var i = 1; i <= r; i++) {
-            $("#Rate" + i).attr('class', 'starGlow');
-        }
-    }
-
-    function CRateOut(r) {
-        for (var i = 1; i <= r; i++) {
-            $("#Rate" + i).attr('class', 'starFade');
-        }
-    }
-
-    function CRateSelected() {
-        var setRating = $("#Rating").val();
-        for (var i = 1; i <= setRating; i++) {
-            $("#Rate" + i).attr('class', 'starGlow');
-        }
-    }
-</script>
