--- a/ECommerce.WebApp/Views/Shared/_Layout.cshtml
+++ b/ECommerce.WebApp/Views/Shared/_Layout.cshtml
@@ -6,12 +6,8 @@
     ViewData["title"] = "Mystic Green";
     var currentCulture = "en-us";
     var isAuthenticate = !string.IsNullOrEmpty(HttpContextAccessor.HttpContext.Session.GetString("token"));
-    var defaultPagingProduct = new Dictionary<string, string>()
-            {
-                { "pageIndex", "1" },
-                { "pageSize", SystemConstants.ProductSettings.pageSizePaging.ToString()},
-                { "categoryId", "0"}
-            };
+    var currentController = ViewContext.RouteData.Values["controller"].ToString().ToLower();
+    var currentAction = ViewContext.RouteData.Values["action"].ToString().ToLower();
 }
 <!DOCTYPE html>
 <html lang="en">
@@ -19,6 +15,7 @@
     <title>@ViewData["title"]</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" href="~/fonts/app-icon/favicon.ico">
 
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i&display=swap" rel="stylesheet">
@@ -30,8 +27,6 @@
     <link rel="stylesheet" href="~/css/owl.carousel.min.css">
     <link rel="stylesheet" href="~/css/owl.theme.default.min.css">
     <link rel="stylesheet" href="~/css/magnific-popup.css">
-
-    @*<link rel="stylesheet" href="~/css/aos.css">*@
 
     <link rel="stylesheet" href="~/css/ionicons.min.css">
 
@@ -49,7 +44,6 @@
     @if (isAuthenticate)
     {
         @await Component.InvokeAsync("HelloHeader")
-        ;
     }
     <!-- NAV -->
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
@@ -61,18 +55,17 @@
 
             <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item " @ViewContext.RouteData.Values["controller"].ToString().ToLower() !="home" ? "active" : "" "">
+                    <li class="nav-item @(currentController=="home"?"active":"") " >
                         <a 
                             asp-controller="home" 
                             asp-action="index" 
                             asp-route-culture="@currentCulture" 
                             class="nav-link">Home</a>
                     </li>
-                    <li class="nav-item " @ViewContext.RouteData.Values["controller"].ToString().ToLower() !="shop" ? "active" : "" "">
+                    <li class="nav-item @(currentController=="shop"?"active":"") ">
                         <a asp-controller="shop"
                            asp-action = "index"
                            asp-route-culture=@currentCulture
-                           asp-all-route-data="@defaultPagingProduct"
                            class="nav-link">
                             Shop
                         </a>
@@ -88,20 +81,20 @@
                     }
                     else
                     {
-                        <li class="nav-item " @ViewContext.RouteData.Values["action"].ToString().ToLower() !="login" ? "active" : "" "">
+                        <li class="nav-item @(currentController=="account" && currentAction=="index" ?"active":"") ">
                             <a 
                                 asp-controller="account" 
                                 asp-action="index" 
                                 class="nav-link">Login</a>
                         </li>
-                        <li class="nav-item " @ViewContext.RouteData.Values["action"].ToString().ToLower() !="register" ? "active" : "" "">
+                        <li class="nav-item @(currentController=="account" && currentAction=="register" ?"active":"") ">
                             <a 
                                 asp-controller="account" 
                                 asp-action="register" 
                                 class="nav-link">Register</a>
                         </li>
                     }
-                    <li class="nav-item cta cta-colored">
+                    <li class="nav-item cta cta-colored ">
                         <a 
                             asp-controller="cart" 
                             asp-action="cart"
@@ -116,7 +109,7 @@
     </nav>
     <!-- END NAV -->
     <!-- SLIDE -->
-    @if (ViewContext.RouteData.Values["controller"].ToString().ToLower() != "account")
+    @if (currentController != "account")
     {
         @await Component.InvokeAsync("Slide")
     }
@@ -150,29 +143,25 @@
                         <h2 class="ftco-heading-2">@ViewData["title"]</h2>
                         <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
                         <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                            <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                            <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                            <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                            <li class="ftco-animate"><a href="https://twitter.com/twitter"><span class="icon-twitter"></span></a></li>
+                            <li class="ftco-animate"><a href="https://www.facebook.com/"><span class="icon-facebook"></span></a></li>
+                            <li class="ftco-animate"><a href="https://www.instagram.com/"><span class="icon-instagram"></span></a></li>
                         </ul>
                     </div>
                 </div>
-                <div class="col-md">
-                    <div class="ftco-footer-widget mb-4 ml-md-5">
-                        <h2 class="ftco-heading-2">Menu</h2>
-                        <ul class="list-unstyled">
-                            <li><a href="#" class="py-2 d-block">Home</a></li>
-                            <li><a href="#" class="py-2 d-block">Shop</a></li>
-                        </ul>
-                    </div>
-                </div>
+                <div class="col-md"></div>
                 <div class="col-md">
                     <div class="ftco-footer-widget mb-4">
                         <h2 class="ftco-heading-2">Have a Questions?</h2>
                         <div class="block-23 mb-3">
                             <ul>
-                                <li><span class="icon icon-map-marker"></span><span class="text">208, Nguyen Huu Canh Street, Ward 22, Binh Thanh, Ho Chi Minh City, Vietnam</span></li>
-                                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-                                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">thangnh1394@gmail.com</span></a></li>
+                                <li>
+                                    <div>
+                                        <span class="icon icon-map-marker"></span><span class="text">208, Nguyen Huu Canh Street, Ward 22, Binh Thanh, Ho Chi Minh City, Vietnam</span>
+                                    </div>
+                                </li>
+                                <li><div><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></div></li>
+                                <li><div><span class="icon icon-envelope"></span><span class="text">thangnh1394@gmail.com</span></div></li>
                             </ul>
                         </div>
                     </div>
@@ -193,7 +182,7 @@
     <!-- END FOORTER -->
     <!-- loader -->
     <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" /><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00" /></svg></div>
-    @*<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>*@
+
     <script src="~/js/jquery.min.js"></script>
     <script src="~/js/jquery-migrate-3.0.1.min.js"></script>
     <script src="~/js/popper.min.js"></script>
@@ -207,8 +196,6 @@
     <script src="~/js/bootstrap-datepicker.js"></script>
     <script src="~/js/scrollax.min.js"></script>
     <script src="~/js/aos.js"></script>
-    @*<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>*@
-    @*<script src="~/js/google-map.js"></script>*@
     <script src="~/js/main.js"></script>
     <script src="~/js/site.js"></script>
     @RenderSection("scripts", required: false)
