--- a/ECommerce.WebApp/Views/Shared/_ProductCard.cshtml
+++ b/ECommerce.WebApp/Views/Shared/_ProductCard.cshtml
@@ -6,7 +6,7 @@
 
 <div class="col-md-6 col-lg-3 ftco-animate">
     <div class="product">
-        <a class="img-prod" asp-route-culture = "@currentCulture" asp-controller="product" asp-route-productId = "@Model.Id">
+        <a class="img-prod" asp-route-culture = "@currentCulture" asp-controller="product" asp-route-productId = "@Model.Id" style="height: 220px;">
             <img class="img-fluid" src="@Model.imagePaths[0]" alt="@Model.Name" style="height: 220px;">
             @*<span class="status">30%</span>*@
             <div class="overlay"></div>
@@ -20,14 +20,11 @@
             </div>
             <div class="bottom-area d-flex px-3">
                 <div class="m-auto d-flex">
-                    <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center btn-add-to-card" data-productId="@Model.Id">
-                        <span><i class="ion-ios-menu"></i></span>
+                    <a href="" class="add-to-cart d-flex justify-content-center align-items-center text-center btn-add-to-card" data-productId="@Model.Id">
+                        <span><i class="ion-ios-add"></i></span>
                     </a>
-                    <a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
+                    <a href="" class="buy-now d-flex justify-content-center align-items-center mx-1" data-productId="@Model.Id">
                         <span><i class="ion-ios-cart"></i></span>
-                    </a>
-                    <a href="#" class="heart d-flex justify-content-center align-items-center ">
-                        <span><i class="ion-ios-heart"></i></span>
                     </a>
                 </div>
             </div>
