--- a/ECommerce.WebApp/Views/Account/Register.cshtml
+++ b/ECommerce.WebApp/Views/Account/Register.cshtml
@@ -13,39 +13,43 @@
                         <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
 
                         <div class="card-body">
-                            <div class="text-danger">
-                                @Html.ValidationSummary(false)
-                            </div>
+                            @if (TempData["registerErrorMessage"] != null)
+                            {
+                                @await Html.PartialAsync("_AlertError", TempData["loginErrorMessage"])
+                            }
                             <form asp-action="register" asp-controller="account" method="post">
                                 <input type="hidden" />
 
                                 <div class="form-group">
                                     <label asp-for="UserName"></label>
                                     <input class="form-control" placeholder="Username" asp-for="UserName" autofocus>
+                                    <span asp-validation-for=UserName style="color: red;"></span>
                                 </div>
                                 <div class="form-group">
                                     <label asp-for="Password"></label>
                                     <input type="password" class="form-control" placeholder="Password" asp-for="Password" autocomplete="off">
+                                    <span asp-validation-for=Password style="color: red;"></span>
                                 </div>
                                 <div class="form-group">
                                     <label asp-for="ConfirmPassword"></label>
                                     <input type="password" class="form-control" placeholder="Password" asp-for="ConfirmPassword" autocomplete="off">
+                                    <span asp-validation-for=ConfirmPassword style="color: red;"></span>
                                 </div>
                                 <div>
                                     <p>
                                         You had an account?
-                                        <a asp-controller="account" asp-action="index">Please Login Here!!!</a>
+                                        <a asp-controller="account" asp-action="login">Please Login Here!!!</a>
                                     </p>
                                 </div>
 
-                                <button class="btn btn-primary" name="button" value="register" style="width: 10rem;">Login</button>
+                                <button class="btn btn-primary" name="button" value="register" style="width: 10rem;">Register</button>
                             </form>
                         </div>
 
                     </div>
                     <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
 
-                        <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp" class="img-fluid" alt="Sample image">
+                        <img src="~/images/register-banner.webp" class="img-fluid" alt="Sample image">
 
                     </div>
                 </div>
