--- a/ECommerce.WebApp/Views/Cart/Cart.cshtml
+++ b/ECommerce.WebApp/Views/Cart/Cart.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
     var requestCreateOrderVM = new CreateOrderRequest();
     decimal subTotal = 0;
-    foreach (var cart in @Model)
+    foreach (var cart in Model)
     {
         subTotal += cart.GetTotalPrice();
     }
@@ -32,8 +32,8 @@
                         <tbody>
                             @foreach (var cart in Model)
                             {
-                                <tr class="text-center">
-                                    <td class="product-remove"><a data-productId=@cart.Product.Id class="btn-remove-cart-item"><span class="ion-ios-close"></span></a></td>
+                                <tr class="text-center @("cart-item-infor-"+cart.Product.Id) ">
+                                    <td class="product-remove"><a data-productId=@cart.Product.Id class="btn btn-danger btn-remove-cart-item"><span class="ion-ios-close" style="color: #fff"></span></a></td>
 
                                     <td class="image-prod"><div class="img" style="background-image:url(@cart.Product.imagePaths[0]);"></div></td>
 
@@ -42,7 +42,7 @@
                                         <p>@cart.Product.Description</p>
                                     </td>
 
-                                    <td class="price">@cart.Product.Price</td>
+                                    <td><a class="$price">@cart.Product.Price<span> $/kg</span></a> </td>
 
                                     <td class="quantity">
                                         <div class="input-group mb-3">
@@ -54,7 +54,7 @@
                                         </div>
                                     </td>
 
-                                    <td class="total">$@cart.GetTotalPrice()</td>
+                                    <td class="total @("total-price-item-"+@cart.Product.Id.ToString())">$@cart.GetTotalPrice()</td>
                                 </tr>
                             }
                         </tbody>
@@ -77,20 +77,20 @@
                                 <h3>Cart Totals</h3>
                                 <p class="d-flex">
                                     <span>Subtotal</span>
-                                    <span class="cart-items-subTotal">@subTotal</span>
+                                    <a style="display: inherit" class="cart-items-subTotal"><span>$ </span>@subTotal</a>
                                 </p>
                                 <p class="d-flex">
                                     <span>Delivery</span>
-                                    <span class="cart-items-delivery">$@delivery</span>
+                                    <a style="display: inherit"  class="cart-items-delivery"><span>$ </span>@delivery</a>
                                 </p>
                                 <p class="d-flex">
                                     <span>Discount</span>
-                                    <span class="cart-items-discount">$@discount</span>
+                                    <a style="display: inherit"  class="cart-items-discount"><span>$ </span>@discount</a>
                                 </p>
                                 <hr>
                                 <p class="d-flex total-price">
                                     <span>Total</span>
-                                    <span class="cart-items-totalPrice">$@(subTotal+delivery-discount)</span>
+                                    <span class="cart-items-totalPrice"><span style="display: inline">$ </span>@(subTotal+delivery-discount)</span>
                                 </p>
                             </div>
                         </div>
