complete alert and validation form admin site

--- a/ECommerce.WebApp/Views/Product/Detail.cshtml
+++ b/ECommerce.WebApp/Views/Product/Detail.cshtml
@@ -83,7 +83,7 @@
                         <p style="color: #000;"><span class="product-stock-availale">@Model.ProductViewModel.Stock</span> kg available</p>
                     </div>
                 </div>
-                <p><a class="btn btn-infor py-3 px-5 btn-add-to-card-productDetail" data-productId=@Model.ProductViewModel.Id>Add to Cart</a></p>
+                <p><a class="btn btn-primary py-3 px-5 btn-add-to-card-productDetail" data-productId=@Model.ProductViewModel.Id>Add to Cart</a></p>
             </div>
         </div>
     </div>
