fix create category and remove product to cart

--- a/ECommerce.WebApp/Views/Cart/Cart.cshtml
+++ b/ECommerce.WebApp/Views/Cart/Cart.cshtml
@@ -77,15 +77,15 @@
                                 <h3>Cart Totals</h3>
                                 <p class="d-flex">
                                     <span>Subtotal</span>
-                                    <a style="display: inherit" class="cart-items-subTotal"><span>$ </span>@subTotal</a>
+                                    <span style="display: inherit" class="cart-items-subTotal"><span>$ </span>@subTotal</span>
                                 </p>
                                 <p class="d-flex">
                                     <span>Delivery</span>
-                                    <a style="display: inherit"  class="cart-items-delivery"><span>$ </span>@delivery</a>
+                                    <span style="display: inherit"  class="cart-items-delivery"><span>$ </span>@delivery</span>
                                 </p>
                                 <p class="d-flex">
                                     <span>Discount</span>
-                                    <a style="display: inherit"  class="cart-items-discount"><span>$ </span>@discount</a>
+                                    <span style="display: inherit"  class="cart-items-discount"><span>$ </span>@discount</span>
                                 </p>
                                 <hr>
                                 <p class="d-flex total-price">
